added baseurl to _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Parklets Map
 created_by: Code for America
+baseurl: http://arubyist.github.io/jekyllmap/
 
 relative_permalinks: true
 permalink: pretty
