--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Parklets Map
 created_by: Code for America
-baseurl: http://arubyist.github.io/jekyllmap/
+#baseurl: http://arubyist.github.io/jekyllmap/
 
 relative_permalinks: true
 permalink: pretty
